Fix distorted images in product slideshow in IE

--- a/less/plugins/ecommerce/product-gallery.less
+++ b/less/plugins/ecommerce/product-gallery.less
@@ -148,6 +148,7 @@
 
         .image {
             opacity: 0;
+            min-height: 20px; // fix for IE
             -webkit-transition: opacity 0.5s ease;
             -moz-transition: opacity 0.5s ease;
             -o-transition: opacity 0.5s ease;
